fix: update userChrome.css to improve tab label alignment on pinned tabs

--- a/dotfiles/firefox/userChrome.css
+++ b/dotfiles/firefox/userChrome.css
@@ -70,6 +70,7 @@
 }
 #sidebar-main:hover #vertical-pinned-tabs-container .tab-label-container {
 	display: flex !important;
+	margin-left: 8px !important;
 }
 
 /* Hide new tab button */
